# arcana-theme

./: .gitignore  AUTHORS  COPYING  INSTALL.md  README.md  change_color.sh  configure.ac  mkrelease.sh
.github/: ISSUE_TEMPLATE.md
common/: Makefile.am
common/cinnamon/3.2/sass/: _common.scss
common/cinnamon/3.4/sass/: _common.scss
common/cinnamon/3.6/sass/: _common.scss
common/cinnamon/3.8/sass/: _common.scss
common/cinnamon/4.0/sass/: _common.scss
common/cinnamon/sass/: _common.scss
common/gnome-shell/3.18/sass/: _colors.scss  _common.scss
common/gnome-shell/3.24/sass/: _common.scss
common/gnome-shell/3.26/sass/: _common.scss
common/gnome-shell/3.28/sass/: _common.scss
common/gnome-shell/3.30/sass/: _colors.scss  _common.scss
common/gnome-shell/3.32/sass/: _common.scss
common/gnome-shell/3.34/sass/: _common.scss
common/gnome-shell/3.36/sass/: _colors.scss  _common.scss
common/gtk-2.0/: apps.rc  panel.rc  xfce-notify.rc
common/gtk-2.0/dark/: gtkrc
common/gtk-2.0/darker/: gtkrc
common/gtk-2.0/light/: gtkrc
common/gtk-2.0/lighter/: gtkrc
common/gtk-2.0/menubar-toolbar/: menubar-toolbar-dark.rc
common/gtk-3.0/3.18/sass/: _applications.scss  _colors-public.scss  _colors.scss  _common.scss  _unity.scss
common/gtk-3.0/3.20/: Makefile.am
common/gtk-3.0/3.20/sass/: _applications.scss  _budgie.scss  _colors.scss  _common.scss  _unity.scss
common/gtk-3.0/3.22/sass/: _applications.scss  _budgie.scss  _common.scss  _unity.scss
common/gtk-3.0/3.24/: Makefile.am
common/gtk-3.0/3.24/sass/: _applications.scss  _common.scss
common/index/dark/: index.theme
common/index/darker/: index.theme
common/index/light/: index.theme
common/index/lighter/: index.theme
common/metacity-1/: metacity-theme-1-dark.xml  metacity-theme-1.xml  metacity-theme-2-dark.xml  metacity-theme-2.xml  metacity-theme-3.xml
common/openbox/Arcana-Dark/openbox-3/: themerc
common/openbox/Arcana-Darker/openbox-3/: themerc
common/openbox/Arcana/openbox-3/: themerc
common/plank/: dock-lighter.theme
common/xfwm4/dark/: themerc
common/xfwm4/light/: themerc
extra/: Makefile.am
extra/Arcana-Plank/: dock.theme
